--- a/database.html
+++ b/database.html
@@ -93,7 +93,7 @@
 
         /* ── Page layout ── */
         .page-content {
-            padding-top: 116px;
+            padding-top: 104px;
         }
 
         /* ── Section titles ── */
@@ -750,7 +750,8 @@
     <!-- ══════════════════════════════════════
      PAGE CONTENT
 ══════════════════════════════════════ -->
-    <main class="page-content" style="max-width:1200px;margin:0 auto;padding:36px 24px 80px;">
+    <main
+        style="max-width:1200px;margin:0 auto;padding-top:104px;padding-left:24px;padding-right:24px;padding-bottom:80px;">
 
         <!-- ── SEARCH RESULTS (hidden by default) ── -->
         <div id="search-results-section" style="display:none;">
